--- a/.npmignore
+++ b/.npmignore
@@ -10,6 +10,7 @@ package-lock.json
 
 dist.zip
 
+.vscode/
 .npmrc
 .editorconfig
 .env.build
@@ -19,3 +20,4 @@ dist.zip
 scaffold.config.js
 node_modules/
 public/
+src/
