--- a/.npmignore
+++ b/.npmignore
@@ -1,23 +1,22 @@
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-package-lock.json
-
-**/dist
-
-dist.zip
-
 .vscode/
+
 .npmrc
 .editorconfig
+.prettierignore
+.eslintignore
 .env.build
 .env.dev
 .gitignore
 
+jsconfig.json
 scaffold.config.js
+package-lock.json
+LICENSE
+
 node_modules/
 public/
 src/
+dist/
+
+dist.zip
+
